fix(user menu): align to top right corner

--- a/client/styles/junk.import.less
+++ b/client/styles/junk.import.less
@@ -43,3 +43,8 @@ body { overflow-y: scroll; }
   margin-left: auto !important;
   margin-right: 0 !important;
 }
+
+#login-dropdown-list {
+  right: 1px;
+  left: auto !important;
+}
